Finally UI changes

--- a/modules/global/src/com/ragenotes/blacklist/entity/messages.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/messages.properties
@@ -3,6 +3,7 @@ Review.entry=Entry
 Review.date=Date
 Review.code=Code
 Review.mark=Mark
+Review.author=Author
 Mark=Mark
 Mark.Negative=Negative
 Mark.ProbablyNot=Probably not
