--- a/modules/global/src/com/ragenotes/blacklist/entity/messages_ru.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/messages_ru.properties
@@ -3,6 +3,7 @@ Review.entry=Запись
 Review.date=Дата
 Review.code=Код
 Review.mark=Оценка
+Review.author=Автор
 Mark=Оценка
 Mark.Negative=Против
 Mark.ProbablyNot=Скорее против
