--- a/modules/web/src/com/ragenotes/blacklist/web/messages.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/messages.properties
@@ -1,9 +1,9 @@
 application.caption=RN Black List
 application.logoImage = branding/app-icon-menu.png
 loginWindow.caption=RN BL Login
-loginWindow.welcomeLabel=Welcome to RN BL!
+loginWindow.welcomeLabel=Welcome to Black List!
 loginWindow.logoImage = branding/app-icon-login.png
-menu-config.entries-blacklist=RN Black List
+menu-config.entries-blacklist=Black List
 menu-config.profiles-blacklist=Profiles
 BlackListEntries=Entries
 BlackList=Black List
@@ -11,12 +11,13 @@ VoterProfiles=Voter Profiles
 AcceptorProfiles=Acceptor Profiles
 ReviewerProfiles=Reviewer Profiles
 Profiles=Profiles
-menu-config.blacklist_BlackListEntry.browse=Entries
-menu-config.blacklist_VoterProfile.browse=Voter Profiles
-menu-config.blacklist_ReviewerProfile.browse=Reviewer Profiles
-menu-config.blacklist_Review.browse=Reviews
-menu-config.blacklist_AcceptorProfile.browse=Acceptor Profiles
-menu-config.blacklist_History.browse=Histories
-menu-config.blacklist_PlayerIP.browse=Player IPs
-menu-config.blacklist_Contact.browse=Contacts
+menu-config.bl_BlackListEntry.browse=Entries
+menu-config.bl_VoterProfile.browse=Voter Profiles
+menu-config.bl_ReviewerProfile.browse=Reviewer Profiles
+menu-config.bl_Review.browse=Reviews
+menu-config.bl_AcceptorProfile.browse=Acceptor Profiles
+menu-config.bl_History.browse=Histories
+menu-config.bl_PlayerIP.browse=Player IPs
+menu-config.bl_Contact.browse=Contacts
 menu-config.info-blacklist=Information
+menu-config.title = Black List
