--- a/modules/web/src/com/ragenotes/blacklist/web/messages_ru.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/messages_ru.properties
@@ -1,9 +1,9 @@
 application.caption=RN Чёрный список
 application.logoImage=branding/app-icon-menu.png
 loginWindow.caption=RN ЧС Вход
-loginWindow.welcomeLabel=Добро пожаловать в RN ЧС!
+loginWindow.welcomeLabel=Добро пожаловать в Black List!
 loginWindow.logoImage=branding/app-icon-login.png
-menu-config.entries-blacklist=RN Чёрный список
+menu-config.entries-blacklist=Чёрный список
 BlackListEntries=Записи
 BlackList=Чёрный список
 VoterProfiles=Профили предложений
@@ -11,12 +11,13 @@ AcceptorProfiles=Профили приемки
 ReviewerProfiles=Профили оценки
 Profiles=Профили
 menu-config.profiles-blacklist=Профили
-menu-config.blacklist_BlackListEntry.browse=Записи
-menu-config.blacklist_VoterProfile.browse=Профили предложений
-menu-config.blacklist_ReviewerProfile.browse=Профили оценки
-menu-config.blacklist_AcceptorProfile.browse=Профили приемки
-menu-config.blacklist_Review.browse=Оценки
-menu-config.blacklist_History.browse=Истории
-menu-config.blacklist_PlayerIP.browse=Пользовательские IP
-menu-config.blacklist_Contact.browse=Контакты
+menu-config.bl_BlackListEntry.browse=Записи
+menu-config.bl_VoterProfile.browse=Профили предложений
+menu-config.bl_ReviewerProfile.browse=Профили оценки
+menu-config.bl_AcceptorProfile.browse=Профили приемки
+menu-config.bl_Review.browse=Оценки
+menu-config.bl_History.browse=Истории
+menu-config.bl_PlayerIP.browse=Пользовательские IP
+menu-config.bl_Contact.browse=Контакты
 menu-config.info-blacklist=Информация
+menu-config.title=Чёрный список
