--- a/modules/web/src/com/ragenotes/blacklist/web/screens/blacklistentry/messages.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/screens/blacklistentry/messages.properties
@@ -10,3 +10,9 @@ create=Create
 review=Review
 accept=Accept
 revote=Renew
+caption.reviews=Reviews
+caption.author=Author
+caption.histories=Hisotries
+caption.playerIps=Player IPs
+caption.contacts=Contacts
+caption.acceptanceAvailable=Available to acceptance
