--- a/modules/web/src/com/ragenotes/blacklist/web/screens/blacklistentry/messages_ru.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/screens/blacklistentry/messages_ru.properties
@@ -10,3 +10,9 @@ create=Создать
 review=Оценка
 accept=Принятие
 revote=Возобновить
+caption.reviews=Оценки
+caption.author=Автор
+caption.histories=Истории
+caption.playerIps=IP игрока
+caption.contacts=Контакты
+caption.acceptanceAvailable=Доступно для приемки
