--- a/modules/web/src/com/ragenotes/blacklist/web/screens/review/messages.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/screens/review/messages.properties
@@ -1,2 +1,3 @@
-browseCaption=Оценки
-editorCaption=Оценка
+browseCaption=Reviews
+editorCaption=Review
+notification.alreadyReviewed=You already have reviewed this entry!
