--- a/modules/global/src/com/ragenotes/blacklist/entity/entries/messages_ru.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/entries/messages_ru.properties
@@ -20,7 +20,7 @@ PlayerIP.code=Код
 PlayerIP.fixationDate=Дата фиксации
 PlayerIP.description=Описание
 History=История
-History.name=Имя
+History.name=Название
 History.code=Код
 History.description=Описание
 History.date=Дата
