--- a/modules/web/src/com/ragenotes/blacklist/web/messages_ru.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/messages_ru.properties
@@ -1,7 +1,7 @@
-application.caption=RN Чёрный список
+application.caption=Чёрный список
 application.logoImage=branding/app-icon-menu.png
-loginWindow.caption=RN ЧС Вход
-loginWindow.welcomeLabel=Добро пожаловать в Black List!
+loginWindow.caption=RN-ЧС Вход
+loginWindow.welcomeLabel=Добро пожаловать в Black List!\nSponsored by React.SU
 loginWindow.logoImage=branding/app-icon-login.png
 menu-config.entries-blacklist=Чёрный список
 BlackListEntries=Записи
