--- a/modules/web/src/com/ragenotes/blacklist/web/screens/acceptorprofile/messages.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/screens/acceptorprofile/messages.properties
@@ -1,2 +1,4 @@
 browseCaption=Acceptors profiles
 editorCaption=Acceptor profile
+caption.contacts=Contacts
+caption.acceptedEntries=Accepted Entries
