--- a/modules/web/src/com/ragenotes/blacklist/web/screens/blacklistentry/messages.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/screens/blacklistentry/messages.properties
@@ -16,3 +16,4 @@ caption.histories=Hisotries
 caption.playerIps=Player IPs
 caption.contacts=Contacts
 caption.acceptanceAvailable=Available to acceptance
+caption.details=Details
