--- a/modules/web/src/com/ragenotes/blacklist/web/screens/blacklistentry/messages_ru.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/screens/blacklistentry/messages_ru.properties
@@ -16,3 +16,4 @@ caption.histories=Истории
 caption.playerIps=IP игрока
 caption.contacts=Контакты
 caption.acceptanceAvailable=Доступно для приемки
+caption.details=Подробнее
