--- a/modules/web/src/com/ragenotes/blacklist/web/screens/reviewerprofile/messages.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/screens/reviewerprofile/messages.properties
@@ -1,2 +1,5 @@
 browseCaption=Review Profiles
-editorCaption=
+editorCaption=Review Profile
+caption.histories=Histories
+caption.reviews=Reviews
+caption.contacts=Contacts
