--- a/modules/web/src/com/ragenotes/blacklist/web/screens/reviewerprofile/messages_ru.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/screens/reviewerprofile/messages_ru.properties
@@ -1,2 +1,5 @@
 browseCaption=Профили оценки
 editorCaption=Профиль оценки
+caption.histories=Истории
+caption.reviews=Оценки
+caption.contacts=Контакты
