--- a/modules/web/src/com/ragenotes/blacklist/web/messages.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web/messages.properties
@@ -1,7 +1,7 @@
-application.caption=RN Black List
+application.caption=Black List
 application.logoImage = branding/app-icon-menu.png
-loginWindow.caption=RN BL Login
-loginWindow.welcomeLabel=Welcome to Black List!
+loginWindow.caption=RN-BL Login
+loginWindow.welcomeLabel=Welcome to Black List!\nSponsored by React.SU
 loginWindow.logoImage = branding/app-icon-login.png
 menu-config.entries-blacklist=Black List
 menu-config.profiles-blacklist=Profiles
