--- a/modules/global/src/com/ragenotes/blacklist/entity/entries/messages.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/entries/messages.properties
@@ -14,6 +14,7 @@ BlackListEntry.voter=Voter
 BlackListEntry.reviewers=Reviewers
 BlackListEntry.status=Status
 BlackListEntry.mark=Mark
+BlackListEntry.number=Number
 PlayerIP=Player IP
 PlayerIP.ip=IP
 PlayerIP.code=Code
