--- a/modules/global/src/com/ragenotes/blacklist/entity/entries/messages_ru.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/entries/messages_ru.properties
@@ -14,6 +14,9 @@ BlackListEntry.voter=Предложил
 BlackListEntry.reviewers=Рассмотрели
 BlackListEntry.status=Статус
 BlackListEntry.mark=Оценка
+BlackListEntry.number=Номер\
+\
+
 PlayerIP=IP игрока
 PlayerIP.ip=IP
 PlayerIP.code=Код
