Last updates : nginx was configured

--- a/modules/global/src/com/ragenotes/blacklist/entity/messages_ru.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/messages_ru.properties
@@ -28,4 +28,6 @@ ContactType.EMail=e-mail
 ContactType.Address=Адрес
 ContactType.Instagram=Instagram
 ContactType.PhoneNumber=Phone number
+ContactType.YandexMoney=Яндекс Деньги
+ContactType.WebMoney=WM-кошелёк
 Contact.value=Значение
