--- a/modules/global/src/com/ragenotes/blacklist/entity/messages.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/messages.properties
@@ -28,4 +28,6 @@ ContactType.EMail=e-mail
 ContactType.Address=Address
 ContactType.Instagram=Instagram
 ContactType.PhoneNumber=Phone number
+ContactType.YandexMoney=Yandex Money
+ContactType.WebMoney=WebMoney
 Contact.value=Value
