Last hot update

--- a/modules/global/src/com/ragenotes/blacklist/entity/messages.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/messages.properties
@@ -19,9 +19,9 @@ ExtUser.acceptorProfile=Acceptor profile
 ExtUser.reviewerProfile=Reviewer profile
 ExtUser.voterProfile=Voter profile
 ContactType=Contact type
-ContactType.VkUrl=Vk url
-ContactType.FacebookUrl=Facebook url
-ContactType.YouTubeUrl=YouTube url
+ContactType.VkUrl=VK
+ContactType.FacebookUrl=Facebook
+ContactType.YouTubeUrl=YouTube
 ContactType.Skype=Skype
 ContactType.Telegram=Telegram
 ContactType.EMail=e-mail
@@ -30,4 +30,9 @@ ContactType.Instagram=Instagram
 ContactType.PhoneNumber=Phone number
 ContactType.YandexMoney=Yandex Money
 ContactType.WebMoney=WebMoney
+ContactType.Qiwi=Qiwi
+ContactType.PayPal=PayPal
+ContactType.Bank=Bank Card
+ContactType.Twitch=Twitch
+ContactType.Other=Other
 Contact.value=Value
