--- a/modules/global/src/com/ragenotes/blacklist/entity/messages_ru.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/messages_ru.properties
@@ -19,15 +19,20 @@ ExtUser.acceptorProfile=Профиль приемки
 ExtUser.reviewerProfile=Профиль ревью
 ExtUser.voterProfile=Профиль предложений
 ContactType=Тип контакта
-ContactType.VkUrl=Vk url
-ContactType.FacebookUrl=Facebook url
-ContactType.YouTubeUrl=YouTube url
+ContactType.VkUrl=VK
+ContactType.FacebookUrl=Facebook
+ContactType.YouTubeUrl=YouTube
 ContactType.Skype=Skype
 ContactType.Telegram=Telegram
 ContactType.EMail=e-mail
 ContactType.Address=Адрес
 ContactType.Instagram=Instagram
-ContactType.PhoneNumber=Phone number
+ContactType.PhoneNumber=Номер телефона
 ContactType.YandexMoney=Яндекс Деньги
 ContactType.WebMoney=WM-кошелёк
+ContactType.Qiwi=Qiwi
+ContactType.PayPal=PayPal
+ContactType.Bank=Банк. карта
+ContactType.Twitch=Twitch
+ContactType.Other=Другое
 Contact.value=Значение
