Update: vk wall notifications

--- a/modules/global/src/com/ragenotes/blacklist/entity/messages.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/messages.properties
@@ -40,6 +40,7 @@ ExportConsumer=Export consumer
 ExportConsumerType=Export consumer type
 ExportConsumerType.PostConsumer=Post Consumer
 ExportConsumerType.VK=VK API
+ExportConsumerType.VKWall=VK Wall
 ExportConsumer.params=Params
 ExportConsumer.isRejectedConsumer=Is Rejected Consumer
 ExportConsumer.isAcceptedConsumer=Is Accepted Consumer
@@ -52,6 +53,7 @@ ExportConsumer.type=Type
 ExportConsumer.url=URL
 ExportConsumer.name=Name
 ExportConsumer.enabled=Enabled
+ExportConsumer.isDistributionConsumer=Distribution Consumer
 ExportParam=Export param
 ExportParam.name=Name
 ExportParam.key=Key
