--- a/modules/global/src/com/ragenotes/blacklist/entity/messages_ru.properties
+++ b/modules/global/src/com/ragenotes/blacklist/entity/messages_ru.properties
@@ -40,6 +40,7 @@ ExportConsumer=Export consumer
 ExportConsumerType=Export consumer type
 ExportConsumerType.PostConsumer=Потребитель Post
 ExportConsumerType.VK=VK API
+ExportConsumerType.VKWall=Стена VK
 ExportConsumer.params=Параметры
 ExportConsumer.isRejectedConsumer=Потребитель отклоненных
 ExportConsumer.isAcceptedConsumer=Потребитель принятых
@@ -52,6 +53,7 @@ ExportConsumer.type=Тип
 ExportConsumer.url=URL
 ExportConsumer.name=Название
 ExportConsumer.enabled=Включен
+ExportConsumer.isDistributionConsumer=Потребитель рассылки
 ExportParam=Export param
 ExportParam.name=Название
 ExportParam.key=Ключ
